<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/date"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:ems="1"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/hour"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:ems="1"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/astro_cloud"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:ems="1"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/astro_seeing"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:ems="1"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/astro_transparency"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:ems="1"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/temp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:ems="1"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/astro_rh"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:ems="1"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/astro_rainsnow"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:ems="1"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/astro_unstable"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:ems="1"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/astro_wind"/>
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_height="match_parent"
        android:layout_width="wrap_content" >
        <ListView
            android:id="@+id/refresh_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000">
        </ListView>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>