<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        style="@style/ToolbarTheme"
        android:id="@+id/toolbar_weather"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="安徽省合肥市"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/iv_toolbar_title_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:src="@drawable/select_address"
                app:layout_constraintStart_toEndOf="@id/tv_toolbar_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="tv_toolbar_title, iv_toolbar_title_icon"/>

            <TextView
                android:id="@+id/tv_toolbar_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_toolbar_title"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layout_tab_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/toolbar_weather"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/date"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:ems="1"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/hour"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:ems="1"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/astro_cloud"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:ems="1"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/astro_seeing"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:ems="1"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/astro_transparency"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:ems="1"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/temp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:ems="1"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/astro_rh"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:ems="1"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/astro_rainsnow"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:ems="1"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/astro_unstable"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:ems="1"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:text="@string/astro_wind"/>
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout_weather"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/layout_tab_title"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/tv_weather_update_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/mxCommon7"
        android:text="17:30"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>